--- a/ud851-Sunshine-student/S02.02-Exercise-Menus/app/src/main/res/values/strings.xml
+++ b/ud851-Sunshine-student/S02.02-Exercise-Menus/app/src/main/res/values/strings.xml
@@ -24,8 +24,9 @@
     <!--or something similar.-->
     <string name="app_name">Sunshine</string>
 
-    <!--TODO (1) Add a string for the title of the refresh button, "Refresh"-->
+    <!--TODO (COMPLETED) Add a string for the title of the refresh button, "Refresh"-->
 
+    <string name="refresh_button">Refresh</string>
 
     <!-- - - - - - - - - - - - - -->
     <!--Used by SunshineDateUtils-->
