--- a/ud851-Sunshine-student/S06.01-Exercise-LaunchSettingsActivity/app/src/main/res/values/strings.xml
+++ b/ud851-Sunshine-student/S06.01-Exercise-LaunchSettingsActivity/app/src/main/res/values/strings.xml
@@ -29,10 +29,13 @@
     <string name="action_map">Map Location</string>
     <string name="action_share">Share</string>
 
-    <!--TODO (3) Add a string called action_settings with value of Settings-->
+    <!--TODO (COMPLETED) Add a string called action_settings with value of Settings-->
 
     <!--Used in overflow menu to refresh weather data-->
     <string name="action_refresh">Refresh</string>
+
+    <!-- Settings Menu String -->
+    <string name="action_settings">Settings</string>
 
     <string name="error_message">
         An error has occurred. Please try again by clicking REFRESH
